--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -11,6 +11,12 @@ html(lang="en")
 
 		block head:styles
 			style.
+				footer {
+					padding-top: 1em;
+					margin-top: 1em;
+					border-top: 1px solid lightgray;
+				}
+
 				footer .links a {
 					display: block;
 				}
