--- a/src/views/article.pug
+++ b/src/views/article.pug
@@ -15,5 +15,5 @@ block body:content
 block append body:footer
 	if own
 		.links
-			a(href=`/articles/${article.id}/edit`) Edit this article
-			a(href=`/articles/${article.id}/delete`) Delete this article
+			a(href=`/articles/${article._id}/edit`) Edit this article
+			a(href=`/articles/${article._id}/delete`) Delete this article
