--- a/src/views/articles.pug
+++ b/src/views/articles.pug
@@ -31,7 +31,7 @@ block body:content
 			.article
 				header
 					h3
-						a(href=`/articles/${article.id}`) "#{article.title}" &mdash; by #{article.author}
+						a(href=`/articles/${article._id}`) "#{article.title}" &mdash; by #{article.author}
 				.content
 					p= article.text.slice(0, 100)
 		+pagination
