--- a/src/views/delete-article.pug
+++ b/src/views/delete-article.pug
@@ -1,5 +1,9 @@
 extends layout
 
+//-
+	this page uses variables:
+		articleID: string | ID
+
 block body:content
 	if articleID == null
 		h1 Error!
