--- a/src/views/error.pug
+++ b/src/views/error.pug
@@ -1,5 +1,9 @@
 extends layout
 
+//-
+	this page uses variables:
+		(optional) message: string
+
 block body:content
 	if message == null
 		h1 😱 An unknown error occurred 😢
