--- a/src/views/user.pug
+++ b/src/views/user.pug
@@ -1,5 +1,13 @@
 extends layout
 
+//-
+	this page uses variables:
+		user: Object {
+			username: string
+			name: string
+			age: number
+		}
+
 block body:content
 	h1 #{user.name}
 
