Add "create article" link

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -38,6 +38,7 @@ html(lang="en")
 				block body:footer
 					.links
 						a(href="/articles") See all articles
+						a(href="/articles/create") Create new article
 						a(href="/auth") Personal page
 
 		block body:scripts
